#6372: Fix anchor tag underline style in dark mode

--- a/netbox/project-static/netbox.scss
+++ b/netbox/project-static/netbox.scss
@@ -102,7 +102,8 @@ body {
       stroke: $gray-200;
     }
   }
-  table {
+  & table,
+  &[data-netbox-color-mode] table {
     a {
       text-decoration: none;
       &:hover {
